--- a/estilos.css
+++ b/estilos.css
@@ -24,3 +24,9 @@ border-left: 50px solid transparent;
 border-right: 50px solid transparent;
 border-bottom: 100px solid green;
 }
+.retangulo {
+    width: 100px;
+    height: 150px;
+
+    background-color:salmon;
+}
